syntax = "proto3";

option csharp_namespace = "StreamServer";

package Streamer;

// The stream service definition.
service Streamer {
  // Sends a greeting
  rpc GetReplyStream (StreamContextRequest) returns (stream StreamReply){};
  rpc GetReply (StreamContextRequest) returns (StreamReply){};
  
}

// The request message containing the user's name.
message StreamContextRequest {
  string name = 1;
}

// The response message containing the greetings.
message StreamReply {
  string message = 1;
}